--- a/Assets/_Project/Scripts/System/Kuro.GameSystem.asmdef
+++ b/Assets/_Project/Scripts/System/Kuro.GameSystem.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "Kuro.GameSystem",
     "rootNamespace": "Kuro.GameSystem",
-    "references": [],
+    "references": [
+        "GUID:4307f53044263cf4b835bd812fc161a4",
+        "GUID:ba8c092d026123a418fb4bfb797a7bd8"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
